[gd_scene load_steps=21 format=1]

[ext_resource path="res://Level1.gd" type="Script" id=1]
[ext_resource path="res://BG.png" type="Texture" id=2]
[ext_resource path="res://tiles.tres" type="TileSet" id=3]
[ext_resource path="res://objects/Sign_1.png" type="Texture" id=4]
[ext_resource path="res://Object_12.png" type="Texture" id=5]
[ext_resource path="res://Object_16.png" type="Texture" id=6]
[ext_resource path="res://objects/Sign_2.png" type="Texture" id=7]
[ext_resource path="res://objects/Crate.png" type="Texture" id=8]
[ext_resource path="res://objects/Bush (3).png" type="Texture" id=9]
[ext_resource path="res://objects/Stone.png" type="Texture" id=10]
[ext_resource path="res://objects/Tree_1.png" type="Texture" id=11]
[ext_resource path="res://objects/Tree_2.png" type="Texture" id=12]
[ext_resource path="res://music/Героическая минорная.ogg" type="AudioStream" id=13]
[ext_resource path="res://fonts/zerovelocity.fnt" type="BitmapFont" id=14]
[ext_resource path="res://player.tscn" type="PackedScene" id=15]
[ext_resource path="res://Object_4.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 27.6276, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 14.8472 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 79.7183, 29.505 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10.774, 11.7528 )

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]

transform/pos = Vector2( 616, 334 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="BG1" type="Sprite" parent="."]

transform/pos = Vector2( 2616, 334 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 128, 128 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 196608, 0, 196609, 2, 196610, 2, 196611, 2, 196612, 2, 196613, 2, 196614, 2, 196615, 2, 196616, 1, 262144, 13, 262145, 16, 262146, 16, 262147, 16, 262148, 16, 262149, 16, 262150, 16, 262151, 16, 262152, 14, 262164, 5, 262165, 6, 262166, 6, 262167, 6, 262168, 7, 327680, 13, 327681, 16, 327682, -2147483632, 327683, 16, 327684, 16, 327685, -2147483632, 327686, 16, 327687, 16, 327688, 15, 327691, 2, 327692, 2, 327693, 2, 327694, 2, 327695, 1, 327697, 5, 327698, 6, 327699, 7, 393216, 13, 393217, 536870928, 393218, 536870928, 393219, -2147483632, 393220, 536870928, 393221, 536870928, 393222, -2147483632, 393223, 16, 393224, 16, 393227, 1073741840, 393228, 1073741840, 393229, 1073741840, 393230, 1073741840, 393231, 14, 458752, 13, 458753, 1073741840, 458754, -2147483632, 458755, 536870928, 458756, -2147483632, 458757, 536870928, 458758, 536870928, 458759, 536870928, 458760, 16, 458763, -2147483632, 458764, 1073741840, 458765, 1073741840, 458766, 16, 458767, 14, 524288, 13, 524289, 536870928, 524290, -2147483632, 524291, 536870928, 524292, -2147483632, 524293, 536870928, 524294, -2147483632, 524295, 1073741840, 524296, 536870928, 524297, 11, 524298, 11, 524299, 536870928, 524300, -2147483632, 524301, -2147483632, 524302, 536870928, 524303, 14, 524304, 11, 524305, 11, 524306, 11, 524307, 11, 524308, 11, 524309, 11, 524310, 11, 524311, 11, 524312, 11, 524313, 11, 524314, 11, 524315, 11, 589824, 9, 589825, 8, 589826, 8, 589827, 8, 589828, 8, 589829, 8, 589830, 8, 589831, 8, 589832, 8, 589833, 12, 589834, 12, 589835, 8, 589836, 8, 589837, 8, 589838, 8, 589839, 10, 589840, -2147483636, 589841, -2147483636, 589842, -2147483636, 589843, -2147483636, 589844, -2147483636, 589845, -2147483636, 589846, 12, 589847, 12, 589848, 12, 589849, 12, 589850, 12, 589851, 12, 655360, -2147483636, 655361, -2147483636, 655362, -2147483636, 655363, -2147483636, 655364, -2147483636, 655365, -2147483636, 655366, -2147483636, 655367, -2147483636, 655368, -2147483636, 655369, -2147483636, 655370, -2147483636, 655371, -2147483636, 655372, -2147483636, 655373, -2147483636, 655374, -2147483636, 655375, -2147483636, 655376, -2147483636, 655377, -2147483636, 655378, -2147483636, 655379, -2147483636, 655380, -2147483636, 655381, -2147483636, 655382, 12, 655383, 12, 655384, 12, 655385, 12, 655386, 12, 655387, 12, 720896, -2147483636, 720897, -2147483636, 720898, -2147483636, 720899, -2147483636, 720900, -2147483636, 720901, -2147483636, 720902, -2147483636, 720903, -2147483636, 720904, -2147483636, 720905, -2147483636, 720906, -2147483636, 720907, -2147483636, 720908, -2147483636, 720909, -2147483636, 720910, -2147483636, 720911, -2147483636, 720912, -2147483636, 720913, -2147483636, 720914, -2147483636, 720915, -2147483636, 720916, -2147483636, 720917, -2147483636, 720918, 12, 720919, 12, 720920, 12, 720921, 12, 720922, 12, 720923, 12, 786432, -2147483636, 786433, -2147483636, 786434, -2147483636, 786435, -2147483636, 786436, -2147483636, 786437, -2147483636, 786438, -2147483636, 786439, -2147483636, 786440, -2147483636, 786441, -2147483636, 786442, -2147483636, 786443, -2147483636, 786444, -2147483636, 786445, -2147483636, 786446, -2147483636, 786447, -2147483636, 786448, -2147483636, 786449, -2147483636, 786450, -2147483636, 786451, -2147483636, 786452, -2147483636, 786453, -2147483636, 786454, 12, 786455, 12, 786456, 12, 786457, 12, 786458, 12, 786459, 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sign_1" type="Sprite" parent="TileMap"]

transform/pos = Vector2( 337.207, 355.559 )
transform/scale = Vector2( 1.42422, 1 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="TileMap/Sign_1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -34.0
margin/top = -27.0
margin/right = 34.0
margin/bottom = 12.0
custom_colors/font_color = Color( 0.379895, 0.0386047, 0.988281, 1 )
text = "FIND JOKER
"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Object_12" type="Sprite" parent="TileMap"]

transform/pos = Vector2( 1659.48, 535.457 )
texture = ExtResource( 5 )

[node name="Object_16" type="Sprite" parent="TileMap"]

transform/pos = Vector2( 1763.53, 488.905 )
transform/scale = Vector2( 0.772231, 0.651239 )
texture = ExtResource( 6 )

[node name="Sign_2" type="Sprite" parent="TileMap"]

transform/pos = Vector2( 52.0159, 353.708 )
texture = ExtResource( 7 )

[node name="Crate" type="Sprite" parent="."]

transform/pos = Vector2( 624, 352 )
texture = ExtResource( 8 )

[node name="Bush (3)" type="Sprite" parent="."]

transform/pos = Vector2( 480, 368 )
texture = ExtResource( 9 )

[node name="Stone" type="Sprite" parent="."]

transform/pos = Vector2( 428.676, 368 )
texture = ExtResource( 10 )

[node name="Tree_1" type="Sprite" parent="."]

transform/pos = Vector2( 880, 368 )
texture = ExtResource( 11 )

[node name="Tree_2" type="Sprite" parent="."]

transform/pos = Vector2( 1056, 240 )
texture = ExtResource( 12 )

[node name="Music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 13 )
stream/play = false
stream/loop = true
stream/volume_db = 16.04
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Victory" type="Sprite" parent="."]

transform/pos = Vector2( 3136, 448 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Victory"]

rect/scale = Vector2( 0.1, 0.1 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -18.0
margin/top = -17.0
margin/right = 349.0
margin/bottom = 127.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.117188, 0.000457764, 0.000457764, 1 )
text = "WIN"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="death" type="Area2D" parent="."]

transform/pos = Vector2( 1634.85, 1380.79 )
transform/scale = Vector2( 62.5545, 3.52748 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.742889, 0, 0, 1, 12.0071, -1.9418 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="death"]

transform/pos = Vector2( 12.0071, -1.9418 )
transform/scale = Vector2( 0.742889, 1 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="player" parent="." instance=ExtResource( 15 )]

transform/pos = Vector2( 96, 336 )

[node name="sprite" parent="player"]

frame = 20

[node name="left_wall" type="StaticBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 22.7355, 0, 282.561 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_wall"]

transform/pos = Vector2( 0, 282.561 )
transform/scale = Vector2( 1, 22.7355 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="right_wall" type="StaticBody2D" parent="."]

transform/pos = Vector2( 3574.68, 815.877 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 40.7768, -4.10132, -286.199 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_wall"]

transform/pos = Vector2( -4.10132, -286.199 )
transform/scale = Vector2( 1, 40.7768 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="coin1" type="Area2D" parent="."]

transform/pos = Vector2( 2850.11, 390.518 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 2.25405, 0, 40.7629 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="icon" type="Sprite" parent="coin1"]

transform/pos = Vector2( 5.53735, 5.85056 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin1"]

transform/pos = Vector2( 0, 40.7629 )
transform/scale = Vector2( 1, 2.25405 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="win" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 3145.14, 428.883 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 6.55851, 0, 0, 6.08685, -6.14258, 11.027 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="win"]

transform/pos = Vector2( -6.14258, 11.027 )
transform/scale = Vector2( 6.55851, 6.08685 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="death" to="." method="_on_death_body_enter"]

[connection signal="body_enter" from="coin1" to="." method="_on_coin1_body_enter"]

[connection signal="body_enter" from="win" to="." method="_on_win_body_enter"]


[editable path="player"]
